--- a/To Do/todo.css
+++ b/To Do/todo.css
@@ -5,6 +5,14 @@
     box-sizing: border-box;
     font-family: 'Nova Flat', cursive;
 }
+header{
+    text-transform: uppercase;
+    font-size: 100px;
+    color: antiquewhite;
+    font-display: center;
+    text-align: center;
+    margin-top: 80px;
+}
 body{
     background: #5656bb;
     overflow: hidden;
